--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=
-HP_API_URL=
+DATABASE_URL=postgres://batool:wesam@localhost:5432/character
+HP_API_URL=http://hp-api.herokuapp.com/api/characters
 PORT=3030
