--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=postgres://batool:wesam@localhost:5432/character
-HP_API_URL=http://hp-api.herokuapp.com/api/characters
+DATABASE_URL=postgres://batool:wesam@localhost:5432/chars
+HP_API_URL=http://hp-api.herokuapp.com/api/character
 PORT=3030
